*django-bootstrap-form-3.1 (27 Oct 2014)

  27 Oct 2014; Michael Weber <xmw@gentoo.org> +django-bootstrap-form-3.1.ebuild,
  +metadata.xml:
  Initial import