@@ -1,1 +1,2 @@
 DIST django-bootstrap-form-3.1.tar.gz 3156 SHA256 d86dc7a70cef093cb775cd5813b1f85d01fa64df0cde05a9915151dbc38eb0d1 SHA512 1348b4033dad7a0d43ac6b30ff4788f9e2164a314f52b4c70faf735e9e26f91ee51fbb50b3a419e1b7cafa2c7033f3317dd1693e9d54c11113acba158c67f492 WHIRLPOOL 1f91b0f83b020d8b10cfb79a9524e7ad1cc7eded71088ef2a31e9f7093b0837942fc52688af7453383446f2cf5b97b6b40a35037af3e1a5424a576c36906ad33
+DIST django-bootstrap-form-3.2.tar.gz 4193 SHA256 015d6e89ea4f90efe68c883702f00a503cecc3cda5b0208b0a9e89eaaff89da3 SHA512 886513b912f2a3c1589c4c80509c3bf71ee3f26d99bc77d059471a971bfec30e3f5dc888340fb204759f8ade3bdcdfa5504b7f3c79fda066b8658d8b8b613e16 WHIRLPOOL a1cc7ae2400fcef21880a07e59e6a3815037ee67db719ff5496454adca80bc6b3309f21384c90b9a5c9fc1cd2011d2fc68cdfdfec75fcbdc44831edf4a01c8d0
